--- a/index.html
+++ b/index.html
@@ -5,18 +5,47 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img class="main-img" src="book-cover.jpg">
-        <h1 class="title">How to Talk to Your Cat About Gun Safety: And Abstinence, Drugs, Satanism, and Other Dangers That Threaten Their Nine Lives</h1>
+        <div class="metadata">
+            <div class="picture-container">
+                <p class="directory-color">Books > Humor & Entertainment > Humor</p>
+                <img class="main-img" src="book-cover.jpg">
+            </div>
+            <div class="text-container">
+                <Article class="book-info">
+
+                    <h1 class="title">How to Talk to Your Cat About Gun Safety: And Abstinence, Drugs, Satanism, and Other Dangers That Threaten Their Nine Lives</h1>
+                    <p>by <a href="" class="Link-color">Zachary Auburn</a> (Author)</p>
+
+                    <img src="./ratings.png" class="ratings" alt="picture of rattings 4 starts out of 5">
+
+
+                    <div class="book-description">
+                        <b>The Cats of America are under siege!</b>
+                        <p>
+                        Long gone are the good old days when a cat's biggest worries were mean  
+                        dogs or a bath. Modern cats must confront satanists, online predators, the 
+                        possibility of needing to survive in a post-apocalyptic wasteland, and countless other threats to their nine lives.
+                        </p>
+
+                        <p>
+                        For over four decades, the American Association of Patriots have stood at the vanguard of our country's <br>
+                        defense by helping to prepare our nation's cat owners for the difficult conversations they dread having with their pets.</p>
+                        <p>
+                        Written in a simple Q&A format, How to Talk to Your Cat About Gun Safety answers crucial questions such as, 
+                        "What is the right age to talk to my cat about the proper use of firearms?" 
+                        and "What are the benefits of my cat living a lifestyle of abstinence?"" and especially 
+                        "Why does my cat need to use the internet? Can't he just play with yarn like cats used to do?"
+                        </p>
+                    </div>
+                    
+                </Article>
+            </div>
+        </div>
     </body>
 </html>
 
 
 <!-- 
-Books > Humor & Entertainment > Humor
-
-How to Talk to Your Cat About Gun Safety: And Abstinence, Drugs, Satanism, and Other Dangers That Threaten Their Nine Lives
-
-by Zachary Auburn (Author)
 
 Long gone are the good old days when a cat’s biggest worries were mean dogs or a bath. Modern cats must confront satanists, online predators, the possibility of needing to survive in a post-apocalyptic wasteland, and countless other threats to their nine lives.
 
