Last touches CSS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </p>
 
                         <p>
-                        For over four decades, the American Association of Patriots have stood at the vanguard of our country's <br>
+                        For over four decades, the American Association of Patriots have stood at the vanguard of our country's
                         defense by helping to prepare our nation's cat owners for the difficult conversations they dread having with their pets.</p>
                         <p>
                         Written in a simple Q&A format, How to Talk to Your Cat About Gun Safety answers crucial questions such as, 
